# paper-check

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  server.py
backend/: __init__.py  agents.py  api.py  app.py  llm.py  local_model.py
frontend/: index.html  main.js  style.css
model/: dataset_eda.ipynb  export_model.py  export_model.sh  finetune.py  finetune_qwen.py  prepare_dataset.py  run_full_finetuning.sh  run_inference.py  train_full.py
web/: app.js  index.html  styles.css
