[project]
name = "paper-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.64.1",
    "fastapi>=0.124.4",
    "fitz>=0.0.1.dev2",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.3",
    "peft>=0.18.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.20",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
