[project]
name = "paper-check"
version = "0.1.0"
description = "AI scientific paper review with structure, coherence, and tone checks powered by LangGraph LLM agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "docling>=2.64.1",
    "fastapi>=0.124.4",
    "fitz>=0.0.1.dev2",
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-google-genai>=4.0.0",
    "langchain-openai>=1.1.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
